--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -3,7 +3,7 @@ name: pr-check
 on:
     pull_request:
         branches:
-            - master
+            - main
 
 jobs:
     build_deploy:
@@ -23,6 +23,3 @@ jobs:
             
             - name: Run linting
               run: pnpm run lint
-            
-            - name: Run tests
-              run: pnpm test
