--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,33 @@
 name: pr-check
 
 on:
+    push:
+        branches:
+            - main
+            - develop
     pull_request:
         branches:
             - main
+            - develop
 
 jobs:
-    build_deploy:
-        runs-on: ubuntu-latest
-    
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
+  build:
+    runs-on: ubuntu-latest
 
-            - name: Set up Node.js
-              uses: actions/setup-node@v4
-              with:
-                node-version: '18'
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-            - name: Install dependencies
-              run: pnpm install
-            
-            - name: Run linting
-              run: pnpm run lint
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+
+    - name: Install pnpm
+      run: npm install -g pnpm
+
+    - name: Install dependencies
+      run: pnpm install
+
+    - name: Install dependencies
+      run: pnpm install
