--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,5 +24,10 @@
   },
   "dependencies": {
     "react": "^18.2.0"
-  }
+  },
+  "main": ".eslintrc.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
