--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
+    "react-stacked-center-carousel": "^1.0.14",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
